# corvus

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: display.rs  errors.rs  known_models.rs  main.rs
src/cmd/: check.rs  env.rs  mod.rs  models.rs  sniff.rs  stats.rs
src/config/: env_vars.rs  mod.rs  settings.rs  stats_cache.rs
src/diagnosis/: mod.rs  model_names.rs  provider.rs
src/proxy/: analyzer.rs  mod.rs  server.rs
